--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Update Lists
 on:
   schedule:
-    - cron: '0/5 * * * *'
+    - cron: '0 0 * * 1'
 jobs:
   update:
     runs-on: ubuntu-latest
