--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,6 @@
 name: Update Lists
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 0 * * 1"
 jobs:
@@ -17,7 +18,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: auto update
+          commit-message: "Auto update #patch"
           title: Auto update
           body: This is an auto-generated PR with updates from source lists.
           assignees: dpup
