--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -14,5 +14,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.26.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_BRANCHES: main
           WITH_V: true
-          INITIAL_VERSION: v1.6.2
